src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_StaticResourceInXKey.xaml


<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:MappingPIGen1="clr-namespace:System;assembly=mscorlib">
<DockPanel
 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 xmlns:sys="clr-namespace:System;assembly=mscorlib"
>
	<DockPanel.Resources>
             <sys:String x:Key="BrushName">RedBrush</sys:String> 
             <SolidColorBrush x:Key="{StaticResource ResourceKey=BrushName}" Color="Red" />                
	</DockPanel.Resources>
	<Button Name="Button1" Background="{DynamicResourceExtension ResourceKey=RedBrush}" />
</DockPanel>
	
</Page>
